<resources>
    <string name="app_name">NUMAD23sp_Team7</string>
    <string name="title_activity_at_your_service">AtYourServiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_select_a_receiver">Please select a receiver:</string>
    <string name="channel_id">send_sticker_channel_id</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">send sticker notification</string>
    <string name="type_a_message">Type a message</string>
    <string name="choose_a_category">Choose A Category</string>
    <string name="search">Search</string>

    <string-array name="categories">
        <item>Category</item>
        <item>book</item>
        <item>furniture</item>
        <item>clothing</item>
        <item>stationery</item>
        <item>electronics</item>
    </string-array>

    <string-array name="locations">
        <item>Location</item>
        <item>Seattle</item>
        <item>Boston</item>
        <item>San Jose</item>
        <item>Vancouver</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="sign_up">Sign up</string>
    <string name="email_">Email:</string>

</resources>