<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/husky_login_bg"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".huskymarket.activities.HuskyLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:src="@drawable/husky"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pacifico_regular"
                android:text="Welcome to Husky Market!"
                android:textColor="@color/dark_brown"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@color/secondary"
            app:cardCornerRadius="@dimen/_18sdp"
            app:cardElevation="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Log In"
                    android:textColor="@color/dark_brown"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/background_signup_login_input"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/background_signup_login_input"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/log_in"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_8sdp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible" />

                </FrameLayout>


                <TextView
                    android:id="@+id/textCreateNewAccountPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Do not have an account?"
                    android:textColor="@color/tertiary"
                    android:textSize="@dimen/_8ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Sign up"
                    android:textColor="@color/dark_brown"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>